[gd_scene load_steps=14 format=2]

[ext_resource path="res://character/character.gd" type="Script" id=1]
[ext_resource path="res://character/player/player.png" type="Texture" id=2]
[ext_resource path="res://assets/HitShader.shader" type="Shader" id=3]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.25165, 0.0, 0, 0 ]

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/IS_ACTIVE = false
shader_param/REPLACE_COLOR = Color( 1, 1, 1, 1 )
shader_param/IGNORE_COLOR = Color( 0.129412, 0.129412, 0.137255, 1 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 11, 15 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 11, 0, 11, 15 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 15, 11, 15 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 11, 15, 11, 15 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 22, 15, 11, 15 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 33, 15, 11, 15 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5.5, 2 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2( -4, 5 )
amount = 5
lifetime_randomness = 0.3
local_coords = false
direction = Vector2( -1, -0.5 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
angular_velocity = 200.0
scale_amount = 1.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 12 )
color = Color( 0.94902, 0.941176, 0.898039, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 20 )
position = Vector2( 0, -2 )
frames = SubResource( 19 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 4 )
shape = SubResource( 9 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBackground" type="ColorRect" parent="HUD"]
margin_left = -8.0
margin_top = -13.0
margin_right = 10.0
margin_bottom = -9.0
color = Color( 0.129412, 0.129412, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthRectDamage" type="ColorRect" parent="HUD"]
margin_left = -7.0
margin_top = -12.0
margin_right = 9.0
margin_bottom = -10.0
color = Color( 0.94902, 0.941176, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthRect" type="ColorRect" parent="HUD"]
margin_left = -7.0
margin_top = -12.0
margin_right = 9.0
margin_bottom = -10.0
color = Color( 0.705882, 0.321569, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
